@@ -2,8 +2,6 @@ package com.roome.domain.user.service;
 
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
@@ -25,13 +23,14 @@ import com.roome.domain.mybookreview.entity.repository.MyBookReviewRepository;
 import com.roome.domain.mycd.entity.MyCd;
 import com.roome.domain.mycd.repository.MyCdCountRepository;
 import com.roome.domain.mycd.repository.MyCdRepository;
+import com.roome.domain.point.repository.PointHistoryRepository;
+import com.roome.domain.point.repository.PointRepository;
 import com.roome.domain.room.entity.Room;
 import com.roome.domain.room.repository.RoomRepository;
 import com.roome.domain.user.entity.User;
 import com.roome.domain.user.repository.UserRepository;
 import com.roome.global.exception.BusinessException;
 import com.roome.global.exception.ErrorCode;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -47,77 +46,73 @@ import org.mockito.quality.Strictness;
 
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
-public class UserServiceTest {
+class UserServiceTest {
 
   @InjectMocks
   private UserService userService;
 
   @Mock
   private UserRepository userRepository;
-
   @Mock
   private HousemateRepository housemateRepository;
-
   @Mock
   private RoomRepository roomRepository;
-
   @Mock
   private FurnitureRepository furnitureRepository;
-
   @Mock
   private MyBookRepository myBookRepository;
-
   @Mock
   private MyBookReviewRepository myBookReviewRepository;
-
   @Mock
   private MyCdRepository myCdRepository;
-
   @Mock
   private CdCommentRepository cdCommentRepository;
-
   @Mock
   private GuestbookRepository guestbookRepository;
-
   @Mock
   private MyCdCountRepository myCdCountRepository;
-
   @Mock
-  private MyBookCountRepository myBookCountRepository;
+  private PointHistoryRepository pointHistoryRepository;
+  @Mock
+  private PointRepository pointRepository;
+  @Mock
+  private MyBookCountRepository myBookCountRepository; // 추가
+
+  private static final Long USER_ID = 1L;
+  private static final Long ROOM_ID = 1L;
 
   private User testUser;
   private Room testRoom;
-  private static final Long USER_ID = 1L;
-  private static final Long ROOM_ID = 1L;
 
   @BeforeEach
   void setUp() {
     testUser = mock(User.class);
     testRoom = mock(Room.class);
 
+    when(testUser.getId()).thenReturn(USER_ID);
     when(testRoom.getId()).thenReturn(ROOM_ID);
+
     when(userRepository.findById(USER_ID)).thenReturn(Optional.of(testUser));
     when(roomRepository.findByUserId(USER_ID)).thenReturn(Optional.of(testRoom));
-
     when(furnitureRepository.findByRoomId(ROOM_ID)).thenReturn(Collections.emptyList());
+    when(myBookCountRepository.findByUserId(USER_ID)).thenReturn(Optional.empty());
   }
 
   @Test
   @DisplayName("회원 탈퇴 성공 - 모든 연관 데이터 삭제")
   void deleteUserSuccess() {
     // given
-    List<Furniture> furnitures = Arrays.asList(mock(Furniture.class), mock(Furniture.class));
-    List<MyBook> myBooks = Arrays.asList(mock(MyBook.class));
-    List<MyCd> myCds = Arrays.asList(mock(MyCd.class), mock(MyCd.class));
-    List<CdComment> comments = Arrays.asList(mock(CdComment.class));
-    List<Guestbook> guestbooks = Arrays.asList(mock(Guestbook.class), mock(Guestbook.class));
+    List<Furniture> furnitures = List.of(mock(Furniture.class), mock(Furniture.class));
+    List<MyBook> myBooks = List.of(mock(MyBook.class));
+    List<MyCd> myCds = List.of(mock(MyCd.class), mock(MyCd.class));
+    List<CdComment> comments = List.of(mock(CdComment.class));
+    List<Guestbook> guestbooks = List.of(mock(Guestbook.class), mock(Guestbook.class));
 
     when(furnitureRepository.findByRoomId(ROOM_ID)).thenReturn(furnitures);
     when(myBookRepository.findAllByUserId(USER_ID)).thenReturn(myBooks);
     when(myCdRepository.findByUserId(USER_ID)).thenReturn(myCds);
     when(cdCommentRepository.findAllByUserId(USER_ID)).thenReturn(comments);
-    when(guestbookRepository.findAllByRoomOrUserId(eq(testRoom), eq(USER_ID))).thenReturn(
-        guestbooks);
+    when(guestbookRepository.findAllByRoomOrUserId(testRoom, USER_ID)).thenReturn(guestbooks);
     when(housemateRepository.deleteByUserIdOrAddedId(USER_ID, USER_ID)).thenReturn(3);
 
     // when
@@ -139,23 +134,20 @@ public class UserServiceTest {
   @DisplayName("회원 탈퇴 성공 - 빈 컬렉션 처리")
   void deleteUserSuccessWithEmptyCollections() {
     // given
+    when(roomRepository.findByUserId(USER_ID)).thenReturn(Optional.of(testRoom));
     when(furnitureRepository.findByRoomId(ROOM_ID)).thenReturn(Collections.emptyList());
     when(myBookRepository.findAllByUserId(USER_ID)).thenReturn(Collections.emptyList());
     when(myCdRepository.findByUserId(USER_ID)).thenReturn(Collections.emptyList());
     when(cdCommentRepository.findAllByUserId(USER_ID)).thenReturn(Collections.emptyList());
-    when(guestbookRepository.findAllByRoomOrUserId(eq(testRoom), eq(USER_ID))).thenReturn(
+    when(guestbookRepository.findAllByRoomOrUserId(testRoom, USER_ID)).thenReturn(
         Collections.emptyList());
 
     // when
     userService.deleteUser(USER_ID);
 
     // then
-    verify(furnitureRepository, never()).deleteAll(any(List.class));
-    verify(myBookRepository, never()).deleteAll(any(List.class));
-    verify(myCdRepository, never()).deleteAll(any(List.class));
-    verify(cdCommentRepository, never()).deleteAll(any(List.class));
-    verify(guestbookRepository, never()).deleteAll(any(List.class));
     verify(userRepository, times(1)).delete(testUser);
+    verify(roomRepository, times(1)).delete(testRoom);
   }
 
   @Test
@@ -168,8 +160,7 @@ public class UserServiceTest {
     assertThatThrownBy(() -> userService.deleteUser(USER_ID)).isInstanceOf(BusinessException.class)
         .hasFieldOrPropertyWithValue("errorCode", ErrorCode.USER_NOT_FOUND);
 
-    verify(housemateRepository, never()).deleteByUserIdOrAddedId(anyLong(), anyLong());
-    verify(userRepository, never()).delete(any(User.class));
+    verify(userRepository, never()).delete(any());
   }
 
   @Test
@@ -182,8 +173,7 @@ public class UserServiceTest {
     userService.deleteUser(USER_ID);
 
     // then
-    verify(furnitureRepository, never()).findByRoomId(anyLong());
-    verify(myCdCountRepository, never()).findByRoom(any());
+    verify(roomRepository, never()).delete(any());
     verify(userRepository, times(1)).delete(testUser);
   }
 
@@ -197,6 +187,6 @@ public class UserServiceTest {
     // when & then
     assertThatThrownBy(() -> userService.deleteUser(USER_ID)).isInstanceOf(RuntimeException.class);
 
-    verify(userRepository, never()).delete(any(User.class));
+    verify(userRepository, never()).delete(any());
   }
 }
